--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
   <meta itemprop="name" content="Pratik Bhoite - Full Stack Web Developer">
   <meta itemprop="description" content="Self Developed personal Portfolio website build with React.js">
   <meta itemprop="image"
-    content="https://raw.githubusercontent.com/pratiksbhoite1/Portfolio-Website/main/Images/pb1.png">
+    content="https://raw.githubusercontent.com/pratiksbhoite1/Portfolio-Website/main/Images/pb1.jpeg">
 
   <!-- Facebook Meta Tags -->
   <meta property="og:url" content="https://www.pratikBhoite.pvt/">
@@ -23,7 +23,7 @@
   <meta property="og:title" content="pratik Bhoite - Full Stack Web Developer">
   <meta property="og:description" content="Self Developed personal Portfolio website build with React.js">
   <meta property="og:image"
-    content="https://raw.githubusercontent.com/pratiksbhoite1/Portfolio-Website/main/Images/pb1.png">
+    content="https://raw.githubusercontent.com/pratiksbhoite1/Portfolio-Website/main/Images/pb1.jpeg">
 
   <!-- Twitter Meta Tags -->
   <meta name="twitter:card" content="summary_large_image">
